Markdown: Fix overflow on single line code blocks - #239

--- a/github-dark.css
+++ b/github-dark.css
@@ -377,6 +377,7 @@
   .markdown-body code, .markdown-body tt {
     padding: 0 .3em !important;
     display: inline-block !important;
+    max-width: 100% !important;
   }
   /* invisible border */
   .gisttabs a:not(.selected), .gisttabs a:not(.selected):hover, .timeline-comment-wrapper, .avatar-stack .avatar,
